# ton_trader

./: .gitignore  README.md  mix.exs  mnemonic.txt  mnemonics.txt
assets/: generate_mnemonic.mjs  package-lock.json  package.json  tailwind.config.js
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
lib/: ton_trader.ex  ton_trader_web.ex
lib/ton_trader/: application.ex  mailer.ex  native.ex  rate_limiter.ex  repo.ex  tonlib_rs.ex  transfers.ex  wallets.ex
lib/ton_trader/tonlib_rs/: jetton_transfer.ex
lib/ton_trader/transfers/: mixing.ex  requests.ex
lib/ton_trader/wallets/: jetton_master.ex  jetton_wallet.ex  registry.ex  requests.ex  server.ex  spawn_wallets_task.ex  supervisor.ex  update_jetton_wallet_balances.ex  wallet.ex  wallet_credentials.ex
lib/ton_trader_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
lib/ton_trader_web/components/: core_components.ex  layouts.ex
lib/ton_trader_web/controllers/: error_html.ex  error_json.ex  page_controller.ex  page_html.ex
lib/ton_trader_web/live/: jetton_masters.ex  wallets.ex
native/tonlibrs/: Cargo.toml  README.md
native/tonlibrs/.cargo/: config.toml
native/tonlibrs/src/: lib.rs
priv/repo/: seeds.exs
priv/repo/migrations/: 20240808055602_create_wallet_credentials.exs  20241013144457_create_jetton_masters.exs  20241013150540_create_jetton_wallets.exs
test/: test_helper.exs
test/support/: conn_case.ex  data_case.ex
test/ton_trader/: wallets_test.exs
test/ton_trader_web/controllers/: error_html_test.exs  error_json_test.exs  page_controller_test.exs
(+5 files in other folders)
